# coding-agents-databricks-apps

./: .gitignore  .syncignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  app.py  app.yaml  app.yaml.template  claude_brain_sync.py  cli_auth.py  conftest.py  content_filter_proxy.py  gunicorn.conf.py  install_gh.sh  pat_rotator.py  pyproject.toml  requirements.txt  ruff.toml  setup_claude.py  setup_codex.py  setup_databricks.py  setup_gemini.py  setup_hermes.py  setup_litellm.py  setup_mlflow.py  setup_opencode.py  setup_proxy.py  state_sync.py  sync_to_workspace.py  utils.py
.claude/skills/bdd-scaffold/test-suite/: behave.ini  pyproject.toml
.claude/skills/bdd-scaffold/test-suite/features/: environment.py
.claude/skills/bdd-scaffold/test-suite/features/catalog/: schema_operations.feature
.claude/skills/bdd-scaffold/test-suite/features/sql/: data_operations.feature
.claude/skills/bdd-scaffold/test-suite/features/steps/: catalog_steps.py  common_steps.py
.github/: pull_request_template.md
claude-commands/: til.md
docs/: deployment.md
memory/: injector.py
spawner/: .gitignore  Makefile  README.md  app.py  app.yaml  pyproject.toml  requirements.txt
static/: index.html  loading.html  poll-worker.js
tests/: conftest.py  test_active_sessions.py  test_auth_enforcement.py  test_batch_output.py  test_clipboard_addon.py  test_frontend_structure.py  test_gateway_discovery.py  test_git_credential_helper.py  test_memory_extractor.py  test_memory_staleness.py  test_mlflow_tracing.py  test_model_defaults.py  test_pat_rotation_integration.py  test_tab_ui.py  (+3 more)
(+34 files in other folders)
